src/objects/Projects__c.object
<CustomObject>
    <fields>
        <fullName>Sprints__c</fullName>
        <label>Sprints</label>
        <summaryFilterItems>
            <field>Backlog__c.Start__c</field>
            <operation>greaterThan</operation>
            <value>1/1/1990</value>
        </summaryFilterItems>
        <summaryForeignKey>Backlog__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Velocity_Total_Project__c</fullName>
        <label>Velocity Total Project</label>
        <summarizedField>Backlog__c.Velocity__c</summarizedField>
        <summaryFilterItems>
            <field>Backlog__c.Start__c</field>
            <operation>greaterThan</operation>
            <value>1/12/1990</value>
        </summaryFilterItems>
        <summaryForeignKey>Backlog__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Velocity_for_the_next_Sprint__c</fullName>
        <formula>Velocity_Total_Project__c  /Sprints__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Velocity for the next Sprint</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>